# jaydee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  test.txt
.github/workflows/: ci-cd.yml
data/: example_scraped.txt  rules.json  test.html
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: README.md  crawler.py  crawler_mt.py  detection_test.py  example.json  github.py  scraper.py  webscraper.py
src/jaydee/: __init__.py  crawler.py  scraper.py  utils.py  webscraper.py
src/scraper/: __init__.py  main.py  scraper.py
tests/: test_crawler.py  test_crawlers.py  test_scraper.py  test_utils.py  test_webscraper.py
